# fimbulwinter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile.am  README.md  build.gradle  chester.txt  config.h.in  configure.ac  desc.json
code/: CMakeLists.txt
code/bnc/: CMakeLists.txt
code/bnc/utility/container/: vector.cpp
code/src/: CMakeLists.txt  core.natvis  utility.natvis
code/src/core/: ArmatureStructurer.hpp  BufferedStream.hpp  BytesStructurer.hpp  IniSerializer.hpp  IniStructurer.hpp  JsonSerializer.hpp  JsonStructurer.hpp  LevelStructurer.hpp  NoSerializer.hpp  PlaceholderStructurer.hpp  PngStructurer.hpp  ReadStream.hpp  ShaderStructurer.hpp  StringSerializer.hpp  StringStream.hpp  StringStructurer.hpp  WriteStream.hpp  color.hpp  content.hpp  debug.hpp  error.cpp  error.hpp  iostream.cpp  iostream.hpp  serialization.hpp  serialize.hpp
code/src/core/async/: Thread.hpp  Thread_kernel32.cpp  Thread_pthread.cpp  delay.hpp
code/src/core/container/: Buffer.cpp  Buffer.hpp  CircleQueue.hpp  Collection.hpp  ExchangeQueue.hpp  Queue.hpp
code/src/core/crypto/: crc.hpp
code/src/core/file/: paths.hpp
code/src/core/graphics/: Image.cpp  Image.hpp  types.hpp
code/src/core/maths/: Matrix.hpp  Plane.hpp  Quaternion.hpp  Scalar.hpp  Vector.hpp  algorithm.hpp  util.hpp
code/src/core/native/: file.hpp  file_kernel32.cpp  file_posix.cpp
code/src/core/sync/: ConditionVariable.hpp  CriticalSection.hpp  Event.hpp  Mutex.hpp
code/src/engine/: Asset.cpp  Asset.hpp  Command.hpp  Cookie.hpp  CookieFactory.hpp  Entity.hpp  EntityEnum.hpp  EntityFactory.hpp  Hash.hpp  HashTable.cpp  HashTable.hpp  MutableEntity.hpp  Token.cpp  Token.hpp  TokenTable.cpp  commands.hpp  common.hpp  console.cpp  console.hpp  console_kernel32.cpp  console_posix.cpp  debug.hpp  module.hpp
code/src/engine/animation/: Armature.cpp  Armature.hpp  Callbacks.hpp  mixer.cpp  mixer.hpp
code/src/engine/application/: config.hpp  window.hpp  window_dummy.cpp  window_user32.cpp  window_x11.cpp
code/src/engine/audio/: system.hpp  system_dummy.cpp  system_fmod.cpp
code/src/engine/file/: common.hpp  config.hpp  loader.cpp  loader.hpp  scoped_directory.hpp  scoped_library.hpp  system.hpp  system_dummy.cpp  system_inotify.cpp  system_kernel32.cpp
code/src/engine/graphics/: config.hpp  message.hpp  opengl.cpp  opengl.hpp  renderer.cpp  renderer.hpp  renderer_opengl_12.cpp  renderer_opengl_30.cpp  renderer_opengl_es.cpp  viewer.cpp  viewer.hpp
code/src/engine/gui/: actions.hpp  common.hpp  controller.cpp  controller.hpp  creation.cpp  creation.hpp  exception.hpp  function.cpp  function.hpp  gui.cpp  gui.hpp  interaction.cpp  interaction.hpp  json_parser.cpp  loading - Copy.cpp  loading.cpp  loading.hpp  loading_utils.hpp  measure.hpp  noodle.hpp  placers.hpp  react.cpp  react.hpp  reaction.cpp  reaction.hpp  render.cpp  render.hpp  resources.cpp  resources.hpp  update.hpp  updater.hpp  view.hpp  view_data.hpp  view_refresh.hpp  views.cpp  views.hpp
code/src/engine/gui2/: actions.hpp  common.hpp  function.hpp  gui.cpp  gui.hpp  measure.hpp  notes.txt  render.cpp  render.hpp  resources.hpp  update.hpp  view.hpp
code/src/engine/hid/: config.hpp  devices.cpp  devices.hpp  devices_dummy.cpp  devices_user32.cpp  devices_x11.cpp  input.cpp  input.hpp  input_user32.cpp  input_x11.cpp  ui.cpp  ui.hpp
code/src/engine/model/: data.hpp  loader.cpp  loader.hpp
code/src/engine/physics/: Callback.hpp  actor_physx.hpp  creation_physx.cpp  defines.hpp  helper_physx.hpp  joint_physx.cpp  material_physx.hpp  physics.cpp  physics.hpp  physics_physx.cpp  physics_physx.hpp
code/src/engine/replay/: reader.cpp  reader.hpp  (+2 more)
code/src/gameplay/: commands.hpp  debug.hpp  factory.cpp  factory.hpp  game-menu.cpp  gamestate.cpp  gamestate.hpp  gamestate_data.hpp  gamestate_gui.cpp  gamestate_gui.hpp  gamestate_models.hpp  level_placeholder.hpp  looper.cpp  looper.hpp  recipes.hpp  roles.hpp  skills.hpp  ui.cpp  ui.hpp
code/src/utility/: aggregation_allocator.hpp  algorithm.hpp  alias.hpp  aligned_array.hpp  annotate.hpp  any.hpp  arithmetics.hpp  array.hpp  array_alloc.hpp  bitmanip.hpp  cast_iterator.hpp  charconv.hpp  compiler.hpp  compound.hpp  encoding_traits.hpp  heap_allocator.hpp  iterator.hpp  json.hpp  lookup_table.hpp  member_info.hpp  null_allocator.hpp  optional.hpp  overflow.hpp  overload.hpp  predicates.hpp  preprocessor.hpp  priority.hpp  profiling.hpp  property.hpp  ranges.hpp  regex.hpp  scalar_alloc.hpp  shared_ptr.hpp  span.hpp  spinlock.hpp  storage.hpp  storing.hpp  stream.hpp  string.hpp  string_conversions.hpp  (+11 more)
code/tst/: CMakeLists.txt  main.cpp  main_core.cpp
code/tst/core/: IniStructurer.cpp  JsonStructurer.cpp  ReadStream.cpp  StringStream.cpp  WriteStream.cpp  debug.cpp  serialization.cpp
code/tst/engine/: Asset.cpp  Entity.cpp  Hash.cpp  MutableEntity.cpp  Token.cpp  console.cpp  record.cpp
code/tst/gameplay/: gamestate.cpp  looper.cpp
code/tst/utility/: aggregation_allocator.cpp  algorithm.cpp  any.cpp  array.cpp  array_alloc.cpp  bitmanip.cpp  charconv.cpp  compound.cpp  iterator.cpp  member_info.cpp  null_allocator.cpp  optional.cpp  overflow.cpp  property.cpp  ranges.cpp  regex.cpp  shared_ptr.cpp  span.cpp  storage.cpp  storing.cpp  string.cpp  string_conversions.cpp  string_view.cpp  type_info.cpp  type_traits.cpp  unicode.cpp  variant.cpp  weak_ptr.cpp
codetest/: CMakeLists.txt
codetest/src/: CMakeLists.txt
codetest/src/engine/: console.cpp
codetest/src/utility/: aggregation_allocator.cpp  array_alloc.cpp  iterator.cpp  string_view.cpp  type_info.cpp  unicode.cpp  variant.cpp
dep/: CMakeLists.txt  CMakeLists.txt.in  initial_cache.cmake.in
game/: AndroidManifest.xml  CMakeLists.txt
game/src/: main.cpp  settings.hpp
tools/: CMakeLists.txt  CMakeLists.txt.in
tools/.probe/: gettid.c
tools/coz/: run.in
tst/: CMakeLists.txt  main.cpp
tst/core/: debug.cpp
tst/core/async/: delayTest.cpp
tst/core/crypto/: crc.cpp
tst/core/maths/: Matrix.cpp  Quaternion.cpp  Vector.cpp  util.cpp
tst/utility/: any.cpp  array.cpp  optional.cpp  property.cpp
(+272 files in other folders)
